<resources>
    <string name="app_name">Smart Road</string>
    <!--    <string name="str_sign_in">Sign in</string>-->
    <string name="str_email">Email</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_continue_with_google">Continue with google</string>
    <string name="str_already_have_account">Already have account</string>
    <string name="str_pothole_map">Pothole Map</string>
    <string name="str_support_your_life">Support your life</string>
    <string name="str_email_verification">Email Verification</string>
    <string name="str_checkemail">Check your email and enter the provided code in the field below</string>
    <string name="str_resend_code">Resend Code</string>
    <string name="str_verification">Verification</string>
    <string name="email_verification_successful">Email verification successful!</string>
    <string name="str_login">Login</string>
    <string name="str_unknown">Unknown</string>
    <string name="str_create_an_account">Create an account</string>
    <string name="str_edit_user_profile">Edit user profile</string>
    <string name="str_your_username">Your user name</string>
    <string name="str_name">Name</string>
    <string name="str_save">Save</string>
    <string name="str_reset_password">Reset password</string>
    <string name="str_new_password">New password</string>
    <string name="str_setting">Setting</string>
    <string name="str_real_time_detection">Real time detection</string>
    <!--    <string name="str_6">6</string>-->
    <!--    <string name="str_300">300</string>-->
    <!--    <string name="str_your_reports">Your reports</string>-->
    <string name="str_points">Points</string>
    <!--    <string name="str_member_type">Member type</string>-->
    <string name="str_notification">Notification</string>
    <!--    <string name="str_select_language">Select language</string>-->
    <string name="str_logout">Logout</string>
    <string name="str_map_downcase">Map</string>
    <string name="str_analytics">Analytics</string>
    <string name="str_community">Community</string>
    <!--    <string name="str_report">Report</string>-->
    <string name="str_ranking">Ranking</string>
    <string name="str_forgot_your_password">Forgot your password?</string>
    <!--    <string name="str_search_your_location">Search your location</string>-->
    <string name="str_change_password_successful">Change password successful!</string>
    <string name="str_back_to_login">Back to Login</string>
    <string name="str_sign_up">Sign up</string>
    <string name="str_forgot_password">Forgot password</string>
    <!--    <string name="str_forgot_reset">Your password has been sent to your registered email.-->
    <!--Please click on Reset Password below to go to the new password setup screen!</string>-->
    <string name="API_KEY" translatable="false">AIzaSyDsbnsjqLNP9xWbj4EhGBPT-VwwgdtvXvM</string>
    <!--    <string name="ServerURL">null</string>-->
    <!--    <string name="LocalhostURL">http://localhost:8000/api/user/auth</string>-->
    <string name="str_login_successful">Login successful</string>
    <!--    <string name="ok">Ok</string>-->
    <string name="str_confirm">Confirm</string>
    <!--    <string name="str_sign_up_successful">Sign up successful</string>-->
    <string name="str_please_enter_your_email">Please enter your email</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="str_enter_code_reset_password">Code have been sent to your email. Please enter your verification code below</string>
    <string name="str_reset_password_successfully">Reset password successfully</string>
    <string name="str_change_password">Change password</string>
    <string name="str_save_successfully">Save successfully</string>
    <string name="str_enter_new_email">Please enter your new email</string>
    <string name="str_change_email">Change Email</string>
    <string name="str_please_enter_your_information">Please enter your information</string>
    <string name="str_password_does_not_match">Password does not match</string>
    <string name="str_wrong_code">Wrong code</string>
    <string name="str_please_enter_your_password">Please enter your password</string>
    <string name="str_please_enter_your_new_email">Please enter your new email</string>
    <string name="str_old_password">Old password</string>
    <string name="str_email_not_found">Email not found</string>
    <string name="str_secret_password" translatable="false">****************</string>
    <string name="str_please_enter_username_and_password">Please enter username and password</string>
    <string name="str_null_bundle">Null bundle</string>
    <string name="str_enter_name_and_username">Please enter full name and username</string>
    <string name="str_change_email_successfully">Change email successfully</string>
    <string name="str_total_reports">Total \nreports</string>
    <string name="str_distance_traveled">Distance \ntraveled</string>
    <!--    <string name="str_fixed_npotholes">Fixed \npotholes</string>-->
    <!--    <string name="str_golden_nmember">Golden \nMember</string>-->
    <!--    <string name="str_report_nyou_have_nmade">Report \nyou have \nmade</string>-->
    <!--    <string name="str_edit_user_infomation">Edit user infomation</string>-->
    <string name="str_edit_user">Edit user</string>
    <string name="str_use_current_location">use current location</string>
    <string name="str_choose_your_language">Choose your language</string>
    <string name="str_english">English</string>
    <string name="str_vietnamese">Vietnamese</string>
    <string name="str_server_error">Server error</string>
    <string name="str_username_not_found">Username not found</string>
    <string name="str_wrong_password">Wrong password</string>
    <string name="str_user_not_found">User not found</string>
    <string name="str_username_already_exists">Username already exists</string>
    <string name="str_email_already_exists">Email already exists</string>
    <string name="str_fixed_potholes">Fixed  potholes</string>
    <string name="str_golden_member">"Golden "</string>
    <string name="str_report_you_have_made">Report  you have  made</string>
    <string name="str_pothole_classification" translatable="false"> Pothole classification</string>
    <string name="str_day_month_analytics" translatable="false">Jan 01 - Jan 08</string>
    <string name="str_longtitude">Longtitude</string>
    <string name="str_latitude">Latitude</string>
    <string name="str_severity">Severity</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_save_this_pothole">Save this pothole?</string>
    <string name="str_error_save_pothole">Error save pothole</string>
    <string-array name="months_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="str_percent" translatable="false">%</string>
    <string name="str_pothole_detection_repairs_overview"><![CDATA[Pothole Detection & Repairs Overview]]></string>
    <string name="str_large">Large</string>
    <string name="str_medium">Medium</string>
    <string name="str_small">Small</string>
    <string name="pothole_count_by_size">Pothole Count By Size</string>
    <string name="str_pothole_classification_by_severity">Pothole Classification by severity</string>
    <string name="str_large_pothole">Large Pothole</string>
    <string name="str_medium_pothole">Medium Pothole</string>
    <string name="str_small_pothole">Small Pothole</string>
    <string name="str_please_check_your_internet_connection">Please check your internet connection</string>
    <string name="str_cannot_save_pothole_due_to_poor_connection">Cannot save pothole due to poor connection</string>
    <string name="str_destination">Destination</string>
    <string name="str_your_destination">Your destination</string>
    <string name="str_network_unavailable">Network unavailable</string>
    <string name="str_network_available">Network available</string>
    <string name="str_rank">Rank</string>
    <string name="str_manual_report">Manual Report</string>
    <string name="str_choose_type">Choose type of pothole</string>
    <string name="str_pothole_type">Pothole type</string>
    <string name="str_pothole_size">Pothole size</string>
    <string name="str_pothole_severity">Pothole severity</string>
    <string name="str_pothole_description">Pothole description</string>
    <string name="str_pothole_image">Pothole image</string>
    <string name="str_pothole_location">Pothole location</string>
    <string name="str_policy_description_info">Collects accelerometer and GPS data to detect potholes and provide mapping. Does not collect personal information without user consent.</string>
    <string name="str_policy_description_usage">GPS data is used to mark and display potholes.
No data is shared with unauthorized third parties.</string>
    <string name="str_policy_description_security">Implements advanced technologies to secure user data. Access to information is authenticated and restricted.</string>

    <string name="str_support_description_user_support">Provides assistance via email for any app-related issues. \nSupport Email: 22520000@gm.uit.edu.vn</string>
    <string name="str_support_description_publisher_infor">Developed by Computer Networking students, UIT, VNU-HCM. Contact via email or phone: Email: 22520000@gm.uit.edu.vn | Phone: 0111111111.</string>
    <string name="ic_policy_description" translatable="false">Privicy Policy Description</string>
    <string name="str_user_support">User Support</string>
    <string name="str_publisher_information">Publisher Information</string>
    <string name="str_help_and_support">Help and Support</string>
    <string name="str_thanks" translatable="false">Make by team 15 © NT118.P11\nThanks for your support!\nVersion 1.0.0</string>
    <string name="str_info_collect">Information Collection</string>
    <string name="str_info_usage">Information Usage</string>
    <string name="str_close">Close</string>
    <string name="str_report_submitted_successfully">Report submitted successfully</string>
    <string name="str_policy">Privicy and Policy</string>
    <string name="str_support">Support</string>
    <string name="str_about_us">About Us</string>
</resources>