<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_marginHorizontal="10dp"
    android:backgroundTint="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSaveTitle"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/str_save_this_pothole"
            android:textColor="@color/dark_purple"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:dividerThickness="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="20dp"/>
        <TextView
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLongtitude"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/str_longtitude"
            android:textColor="@color/purple"
            android:textSize="16sp"/>
        <TextView
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLatitude"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/str_latitude"
            android:textColor="@color/purple"
            android:textSize="16sp"/>
        <TextView
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSeverity"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/str_severity"
            android:textColor="@color/purple"
            android:textSize="16sp"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:dividerThickness="2dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cornerRadius="20dp"
                android:id="@+id/btnYes"
                android:text="@string/str_yes"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="@color/dark_green"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cornerRadius="20dp"
                android:id="@+id/btnNo"
                android:text="@string/str_no"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginHorizontal="20dp"
                app:backgroundTint="@color/red"
                android:layout_marginVertical="10dp"/>
        </LinearLayout>

    </LinearLayout>



</com.google.android.material.card.MaterialCardView>