<!-- Auto layout, variables, and unit scale are not yet supported -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SplashScreenActivity">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideTop"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideLeft"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideLeft2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideRight2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"/>

    <ImageView
        android:layout_width="349dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:id="@+id/imaPotholeMap"
        android:src="@drawable/pothole_splash"
        app:layout_constraintBottom_toTopOf="@+id/guideBot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideTop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_pothole_map"
        android:textColor="@color/dark_purple"
        android:textSize="40sp"
        android:textStyle="bold"
        android:id="@+id/tvPotholeMap"
        app:layout_constraintBottom_toTopOf="@+id/guideTop"
        app:layout_constraintLeft_toRightOf="@id/guideLeft"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_support_your_life"
        android:textColor="@color/dark_purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvPotholeMap"
        app:layout_constraintTop_toBottomOf="@+id/tvPotholeMap" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_purple"
        android:text="@string/str_login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideRight2"
        app:layout_constraintStart_toStartOf="@+id/guideLeft2"
        app:layout_constraintTop_toBottomOf="@id/guideBot" />

    <TextView
        android:id="@+id/tvCreate"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/str_create_an_account"
        app:layout_constraintEnd_toStartOf="@+id/guideRight2"
        app:layout_constraintStart_toStartOf="@+id/guideLeft2"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"

        />

</androidx.constraintlayout.widget.ConstraintLayout>
