<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="30dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginHorizontal="20dp"
    android:backgroundTint="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_pothole_classification_by_severity"
            android:textSize="23sp"
            android:gravity="center"
            android:textColor="@color/dark_purple"
            android:textStyle="bold"
            android:id="@+id/tvTitle"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_two"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_large_pothole"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:id="@+id/tvLargePercentage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textColor="@color/color_one"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_two"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_medium_pothole"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:id="@+id/tvMediumPercentage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textColor="@color/color_one"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_two"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_small_pothole"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:id="@+id/tvSmallPercentage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textColor="@color/color_one"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>